java8.spoofax3/test/statics/java/packages/unit-with-partial-package.no.spt.bak
module packages/unit-with-partial-package_no

language metaborg-java

test unit-with-partial-package [[

test;



// error: 

[p] {

    [q] {

        [A]
        package p;
        public class A {}

    }
}

]] analysis fails
   run javacFails to ""
